fixed html tag elements

--- a/index.html
+++ b/index.html
@@ -57,5 +57,7 @@
                     <i class='bx bx-chevrons-right'></i>
                 </button>
             </div>
+        </section>
+    </main>
 </body>
 </html>
