modified html contents

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Box Icon Link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- Style CSS -->
+     <link rel="stylesheet" href="style.css">
     <title>Team Music Player</title>
 </head>
 <body>
@@ -13,7 +15,7 @@
         <section id="music-card">
             <div id="music-header">
                 <div class="header-item">
-                    <button>
+                    <button class="btn">
                         <i class='bx bxs-chevron-left'></i>
                     </button>
                 </div>
@@ -21,7 +23,7 @@
                     <h3>Music Player</h3>
                 </div>
                 <div class="header-item">
-                    <button class="volume-btn">
+                    <button class="btn volume-btn">
                         <i class='bx bx-volume-low'></i>
                     </button>
                     <div class="volume-control">
@@ -47,13 +49,13 @@
                 </div>
             </div>
             <div class="music-controls">
-                <button id="prevBtn">
+                <button id="prevBtn" class="btn">
                     <i class='bx bx-chevrons-left'></i>
                 </button>
-                <button id="playPlauseBtn">
+                <button id="playPlauseBtn" class="btn">
                     <i class='bx bx-play-circle'></i>
                 </button>
-                <button id="nextBtn">
+                <button id="nextBtn" class="btn">
                     <i class='bx bx-chevrons-right'></i>
                 </button>
             </div>
