modified html content

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 </div>
             </div>
             <div id="music-progress">
-                <div>
-                    <input type="range" id="progress-bar">
+                <div class="progress-bar-wrapper">
+                    <input type="range" id="progress-bar" value="0">
                 </div>
                 <div class="music-timer">
                     <p id="current-timer">00:00</p>
@@ -52,8 +52,8 @@
                 <button id="prevBtn" class="btn">
                     <i class='bx bx-chevrons-left'></i>
                 </button>
-                <button id="playPlauseBtn" class="btn">
-                    <i class='bx bx-play-circle'></i>
+                <button id="playPauseBtn" class="btn">
+                    <i class='bx bx-play-circle playBtn-icon'></i>
                 </button>
                 <button id="nextBtn" class="btn">
                     <i class='bx bx-chevrons-right'></i>
