added scripts sources

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <!-- HTML Structure -->
      <main>
         <section id="music-card">
+            <audio src="" id="audio"></audio>
             <div id="music-header">
                 <div class="header-item">
-                    <button class="btn">
+                    <button class="btn btn-back">
                         <i class='bx bxs-chevron-left'></i>
                     </button>
                 </div>
@@ -61,5 +62,8 @@
             </div>
         </section>
     </main>
+
+    <script src="songs.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
