modified html contents

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </button>
                 </div>
                 <div class="header-item">
-                    <h3>Music Player</h3>
+                    <h3>Mellodee</h3>
                 </div>
                 <div class="header-item">
                     <button class="btn volume-btn">
@@ -36,8 +36,8 @@
                 <div class="album-cover">
                 </div>
                 <div class="music-body">
-                    <h2 class="music-title">Mogbe</h2>
-                    <h4 class="artiste-name">Asake</h4>
+                    <h2 class="music-title"></h2>
+                    <h4 class="artiste-name"></h4>
                 </div>
             </div>
             <div id="music-progress">
