modified volume slider attribute

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 <div class="header-item">
                     <h3>Mellodee</h3>
                 </div>
-                <div class="header-item">
+                <div class="header-item" id="volume-wrap">
                     <button class="btn volume-btn">
                         <i class='bx bx-volume-low'></i>
                     </button>
                     <div class="volume-control">
-                        <input type="range" name="volume" id="volume-range">
+                        <input type="range" name="volume" id="volume-range" max="1" min="0" step="0.1">
                     </div>
                 </div>
             </div>
