added id volume icon

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="header-item" id="volume-wrap">
                     <button class="btn volume-btn">
-                        <i class='bx bx-volume-low'></i>
+                        <i class='bx bx-volume-low' id="volume-icon"></i>
                     </button>
                     <div class="volume-control">
                         <input type="range" name="volume" id="volume-range" max="1" min="0" step="0.1">
